Create sub pages and navigation bar (so far only templates)

--- a/fms-gui-client/src/app/app.component.html
+++ b/fms-gui-client/src/app/app.component.html
@@ -1,9 +1,2 @@
-<div style="text-align:center">
-  <h1>
-    Welcome to the {{ title }}!
-  </h1>
-  <div>
-	This page will contain the new, web-based UI for the FMS of the <a href="https://spaceteam.at/">TU Space Team</a>
-  </div>
-</div>
+<app-nav></app-nav>
 <router-outlet></router-outlet>
