FMS Client - Implement retrieving data from server, add mock fms data retrieval

--- a/fms-gui-client/src/app/main/main.component.html
+++ b/fms-gui-client/src/app/main/main.component.html
@@ -1,13 +1,11 @@
 <div class="text-center">
-<h1>
-  Welcome to the {{ title }}!
-</h1>
-<div>
-  <p>
-    This page will contain the new, web-based UI for the FMS of the <a href="https://spaceteam.at/">TU Space Team</a>
-  </p>
-  <p>
-    It'll contain the main page for the ground station.
-  </p>
-</div>
+  <h1>{{ title }}</h1>
+  <div>
+    <p>
+      This page will contain the new, web-based UI for the FMS of the <a href="https://spaceteam.at/">TU Space Team</a>
+    </p>
+    <p>
+      It'll contain the main page for the ground station.
+    </p>
+  </div>
 </div>
