--- a/fms-gui-client/src/app/flightmode/flightmode.component.html
+++ b/fms-gui-client/src/app/flightmode/flightmode.component.html
@@ -1,10 +1,6 @@
 <div class="text-center">
-  <h1>
-    Welcome to the {{ title }}!
-  </h1>
-  <div>
-    <p>
-      This page will contain the {{ title }}
-    </p>
+  <h1>{{ title }}</h1>
+  <div *ngIf="fmsData">
+    Loaded FMS data
   </div>
 </div>
