FMS Client - Bootstrap, add Material instead, fill the status window with mock content

--- a/fms-gui-client/src/app/flightmode/flightmode.component.html
+++ b/fms-gui-client/src/app/flightmode/flightmode.component.html
@@ -1,5 +1,7 @@
-<div class="text-center">
-  <h1>{{ title }}</h1>
+<div>
+  <mat-toolbar color="primary">
+    <span>{{ title }}</span>
+  </mat-toolbar>
   <div *ngIf="fmsData">
     Loaded FMS data
   </div>
