--- a/fms-gui-client/src/app/shared/nav/nav.component.html
+++ b/fms-gui-client/src/app/shared/nav/nav.component.html
@@ -1,15 +1,15 @@
-<nav class="col-md-2 d-none d-md-block bg-light sidebar">
+<nav>
   <!-- Collapsible content -->
-  <div class="sidebar-sticky">
-    <ul class="nav flex-column">
+  <div>
+    <ul>
       <!-- TODO: Add a hamburger-menu -->
-      <li class="nav-item">
+      <li>
         <a routerLink="/">Main</a>
       </li>
-      <li class="nav-item">
+      <li>
         <a routerLink="/statuspanel">Status panel</a>
       </li>
-      <li class="nav-item">
+      <li>
         <a routerLink="/flightmode">Flight mode</a>
       </li>
     </ul>
