--- a/fms-gui-client/src/styles.scss
+++ b/fms-gui-client/src/styles.scss
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+// Classes
+.loaded { background-color: green; }
+.notLoaded { background-color: red; }
+
+// Tags
+ul, ol { list-style-type: none; }
