--- a/fms-gui-client/src/app/main/main.component.html
+++ b/fms-gui-client/src/app/main/main.component.html
@@ -1,49 +1,46 @@
 <div>
-  <mat-toolbar color="primary">
-    <span>{{ title }}</span>
-  </mat-toolbar>
+  <h1>{{ title }}</h1>
   <mat-card id="div-connection" *ngIf="fmsData">
-    <h2>Connection</h2>
-  </mat-card>
-  <mat-card id="div-windows" *ngIf="fmsData">
-    <h2>Windows</h2>
+    <mat-card-title>Connection</mat-card-title>
   </mat-card>
   <mat-card id="div-status" *ngIf="fmsData">
-    <h2>Status</h2>
-    <ul>
-      <li>
-        <span>Timestamp</span>{{separator}}{{space}}{{fmsData.status.localTimestamp}}
-      </li>
-      <li>
-        <span>CPU load</span>{{separator}}{{space}}{{fmsData.status.cpu_load}}
-      </li>
-      <li>
-        <span
-          [class.notLoaded]="fmsData.status.flags.adc_initialized"
-          [class.loaded]="fmsData.status.flags.adc_initialized"
-        >
-          ADC
-        </span>
-      </li>
-      <li>
-        <span
-          [class.notLoaded]="fmsData.status.flags.dac_initialized"
-          [class.loaded]="fmsData.status.flags.dac_initialized"
-        >
-          DAC
-        </span>
-      </li>
-      <li>
-        <span
-          [class.notLoaded]="fmsData.status.flags.dma_initialized"
-          [class.loaded]="fmsData.status.flags.dma_initialized"
-        >
-          DMA
-        </span>
-      </li>
-      <li>
-        <span>Flash</span>{{separator}}{{space}}{{fmsData.status.flash_adr}}% full
-      </li>
-    </ul>
+    <mat-card-title>Status</mat-card-title>
+    <mat-card-content>
+      <ul>
+        <li>
+          <span>Timestamp</span>{{separator}}{{space}}{{fmsData.status.localTimestamp}}
+        </li>
+        <li>
+          <span>CPU load</span>{{separator}}{{space}}{{fmsData.status.cpu_load}}
+        </li>
+        <li>
+          <span
+            [class.notLoaded]="fmsData.status.flags.adc_initialized"
+            [class.loaded]="fmsData.status.flags.adc_initialized"
+          >
+            ADC
+          </span>
+        </li>
+        <li>
+          <span
+            [class.notLoaded]="fmsData.status.flags.dac_initialized"
+            [class.loaded]="fmsData.status.flags.dac_initialized"
+          >
+            DAC
+          </span>
+        </li>
+        <li>
+          <span
+            [class.notLoaded]="fmsData.status.flags.dma_initialized"
+            [class.loaded]="fmsData.status.flags.dma_initialized"
+          >
+            DMA
+          </span>
+        </li>
+        <li>
+          <span>Flash</span>{{separator}}{{space}}{{fmsData.status.flash_adr}}% full
+        </li>
+      </ul>
+    </mat-card-content>
   </mat-card>
 </div>
