--- a/fms-gui-client/src/app/statuspanel/statuspanel.component.html
+++ b/fms-gui-client/src/app/statuspanel/statuspanel.component.html
@@ -1,7 +1,5 @@
-<div>
-  <mat-toolbar color="primary">
-    <span>{{ title }}</span>
-  </mat-toolbar>
+<div id="div-status-panel">
+  <h1>{{ title }}</h1>
   <div *ngIf="fmsData">
     <p>Retrieved data at: {{ date }}</p>
     <div>
