--- a/fms-gui-client/src/app/flightmode/flightmode.component.html
+++ b/fms-gui-client/src/app/flightmode/flightmode.component.html
@@ -1,7 +1,5 @@
 <div>
-  <mat-toolbar color="primary">
-    <span>{{ title }}</span>
-  </mat-toolbar>
+  <h1>{{ title }}</h1>
   <div *ngIf="fmsData">
     Loaded FMS data
   </div>
