FMS Client - Add icons to the navigation, change mock-fms.ts to mock-fms json

--- a/fms-gui-client/src/app/flightmode/flightmode.component.html
+++ b/fms-gui-client/src/app/flightmode/flightmode.component.html
@@ -1,6 +1,6 @@
-<div>
-  <h1>{{ title }}</h1>
+<main>
+  <mat-toolbar>{{ title }}</mat-toolbar>
   <div *ngIf="fmsData">
     Loaded FMS data
   </div>
-</div>
+</main>
