--- a/fms-gui-client/src/app/shared/nav/nav.component.html
+++ b/fms-gui-client/src/app/shared/nav/nav.component.html
@@ -1,4 +1,7 @@
 <mat-nav-list *ngIf="navItems">
   <!-- Navigation items -->
-  <a mat-list-item *ngFor="let item of navItems" [routerLink]=[item.route]>{{item.title}}</a>
+  <mat-list-item *ngFor="let item of navItems" (click)="nav.click()">
+    <mat-icon matListIcon>{{item.icon}}</mat-icon>
+    <a [routerLink]=[item.route] #nav>{{item.title}}</a>
+  </mat-list-item>
 </mat-nav-list>
