--- a/fms-gui-client/src/styles.scss
+++ b/fms-gui-client/src/styles.scss
@@ -6,8 +6,14 @@
 .notLoaded { background-color: red; }
 
 // Tags
-ul, ol { list-style-type: none; }
+a { outline: 0; }
+
 body {
   font-family: Roboto, Arial, sans-serif;
   margin: 0;
 }
+
+main { min-height: 25vw; }
+
+ul, ol { list-style-type: none; }
+
