--- a/fms-gui-client/src/app/app.component.html
+++ b/fms-gui-client/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div id="div-app">
   <mat-toolbar color="primary">
-    <button mat-icon-button (click)="sideNav.toggle()">
+    <button mat-icon-button (click)="sideNav.toggle()" id="button-menu">
       <mat-icon>menu</mat-icon>
     </button>
     <h1>{{ title }}</h1>
