--- a/fms-gui-client/src/app/statuspanel/statuspanel.component.html
+++ b/fms-gui-client/src/app/statuspanel/statuspanel.component.html
@@ -2,8 +2,41 @@
   <mat-toolbar>{{ title }}</mat-toolbar>
   <div *ngIf="fmsData">
     <p>Retrieved data at: {{ date }}</p>
-    <div>
-      {{fmsData.startingTime}}
-    </div>
+    <mat-grid-list cols="3" class="margin-1em">
+      <!-- Contains the control buttons on the left side of the panel -->
+      <mat-grid-tile id="control-container">
+        Controls
+      </mat-grid-tile>
+      <!-- Contains the status bytes, which indicate if something is on or off -->
+      <mat-grid-tile id="status-bytes-container">
+        Status bytes
+      </mat-grid-tile>
+      <!-- Contains the additional, specially highlighted information -->
+      <mat-grid-tile id="highlight-component">
+        <div id="highlight-container" class="grid grid-cols-2">
+          <mat-card id="status-container">
+            <mat-card-title>Status</mat-card-title>
+          </mat-card>
+          <mat-card id="temperature-container">
+            <mat-card-title>Temperature</mat-card-title>
+          </mat-card>
+          <mat-card id="accelerations-container">
+            <mat-card-title>Accelerations</mat-card-title>
+          </mat-card>
+          <mat-card id="psu-container">
+            <mat-card-title>PSU</mat-card-title>
+          </mat-card>
+          <mat-card id="gyros-container">
+            <mat-card-title>Gyros</mat-card-title>
+          </mat-card>
+          <mat-card id="magnometers-container">
+            <mat-card-title>Magnometers</mat-card-title>
+          </mat-card>
+          <mat-card id="additional-container">
+            <mat-card-title>Additional</mat-card-title>
+          </mat-card>
+        </div>
+      </mat-grid-tile>
+    </mat-grid-list>
   </div>
 </main>
