--- a/fms-gui-client/src/styles.scss
+++ b/fms-gui-client/src/styles.scss
@@ -1,6 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
+html, body {
+  min-height: 100%;
+}
+
 // Classes
 .loaded { background-color: green; }
 .notLoaded { background-color: red; }
