--- a/fms-gui-client/src/app/statuspanel/statuspanel.component.scss
+++ b/fms-gui-client/src/app/statuspanel/statuspanel.component.scss
@@ -15,5 +15,9 @@
 }
 
 .grid-cols-2 {
-  grid-template-columns: auto auto;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.grid-cols-3 {
+  grid-template-columns: repeat(3, 1fr);
 }
